# personal_ai_agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: app.py  config.py
app/core/: metadata.py  pipeline.py
app/loaders/: document.py
app/rag/: conversation_chain.py
app/ui/: chat_interface.py  visualizer.py
app/vectorstore/: manager.py
notebooks/: dev.ipynb
