[project]
name = "personal_ai_agent"
version = "1.0.0"
description = "An AI-powered agent that retrieves and answers questions based on personal profile data from the integrated knowledge base."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.0.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "ruff>=0.12.3",
]
